# finTrack

./: .gitignore  LICENSE  README.md  main.py  models.py  package.json  pyproject.toml  test.py
api/: app.py  dependencies.py
api/routes/: advice.py  categories.py  goals.py  transactions.py
core/: log.py
db/: read.py  schema.py  write.py
frontend/: package.json
ingestion/: input.py  parser.py
llm/: advise.py  categorize.py  interface.py
