[project]
name = "fintrack"
version = "0.1.0"
description = "Personal finance tracking app with local LLM categorization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "mypy>=2.1.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "rich>=15.0.0",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]

[tool.uvs.scripts]
dev = "uvicorn api.app:app --reload"
dev-host = "uvicorn api.app:app --reload --host 0.0.0.0 --port 8000"
init-db = "python -c 'from db.schema import init_db; init_db()'"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy ."

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = [".venv"]
